--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
             border-top: 1px solid #fff;
             max-width: 48ch;
             opacity: 0;
-            transform: translateY(10px);
-            transition: opacity 0.4s cubic-bezier(.2,.9,.2,1), transform 0.4s cubic-bezier(.2,.9,.2,1);
+            transform: translateY(8px);
+            transition: opacity 0.5s cubic-bezier(0.16, 1, 0.3, 1), transform 0.5s cubic-bezier(0.16, 1, 0.3, 1);
         }
 
         .note.visible {
@@ -304,8 +304,8 @@
         /* smooth transitions for note closing */
         .note.closing {
             opacity: 0;
-            transform: translateY(-10px);
-            transition: opacity 0.3s ease, transform 0.3s ease;
+            transform: translateY(-8px);
+            transition: opacity 0.4s cubic-bezier(0.16, 1, 0.3, 1), transform 0.4s cubic-bezier(0.16, 1, 0.3, 1);
         }
 
         @media (max-width: 900px) {
@@ -558,15 +558,18 @@
 
             document.getElementById('notes-container').insertAdjacentHTML('beforeend', noteHTML);
 
-            // animate in
+            // animate in - use double RAF for smoother animation
             requestAnimationFrame(() => {
-                const el = document.getElementById(`note-${noteId}`);
-                if (el) {
-                    el.classList.add('visible');
-                    setTimeout(() => {
-                        el.scrollIntoView({ behavior: 'smooth', block: 'center' });
-                    }, 50);
-                }
+                requestAnimationFrame(() => {
+                    const el = document.getElementById(`note-${noteId}`);
+                    if (el) {
+                        el.classList.add('visible');
+                        // Scroll after animation starts
+                        setTimeout(() => {
+                            el.scrollIntoView({ behavior: 'smooth', block: 'center' });
+                        }, 100);
+                    }
+                });
             });
 
             // ensure any notes tracked in `openNotes` remain visible (not collapsed)
@@ -604,8 +607,7 @@
                         navigationPath.unshift('welcome');
                     }
                     updateBreadcrumb();
-                    drawConnections();
-                }, 300);
+                }, 400);
             }
         }
 
